package com.club.enumeration;
public enum EstadoPago { REGISTRADO, ANULADO }
