package com.club.enumeration;
public enum EstadoSocio { ACTIVO, INACTIVO }
