package com.club.enumeration;
public enum MedioPago { EFECTIVO, TRANSFERENCIA, MERCADO_PAGO }
